fix: improve accessibility by adjusting link contrast color and increasing navbar font size

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,25 +75,36 @@ list-inline {
 	transition: color 0.3s ease-in-out;
 }
 .icon-social-github:hover, .icon-social-instagram:hover, .icon-social-linkedin:hover {
-  color: #b817dc;
+  color: #8802a6;
 }
 
 .custom-navbar {
   opacity: 0.8; /* Adjust the opacity value as needed */
 }
 
-.nav-item a.nav-link:hover {
-  color: #b817dc !important;
+.nav-item {
+	font-size: 17px;
+}
+
+a.nav-link:hover {
+  color: hsl(289, 98%, 33%) !important;
 }
 
 .navbar-nav .nav-item a.nav-link:hover {
-  color: #b817dc;
+  color: #8802a6;
   transition: color 0.3s ease-in-out;
+
+
 }
 
 .navbar-nav .nav-link.active {
 	font-weight: bold;
 	color: #000000 !important;
+	font-size: 17px;
+}
+
+.navbar-item {
+
 }
 
 .btn {
@@ -504,7 +515,7 @@ list-inline {
 	.carousel-caption {
 			padding: 0; /* Remove padding on small screens */
 			background-color: rgba(205, 201, 201, 0.7); 
-			color: #000;
+			color: #383636;
 	}
 }
 
